Started budget page

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -6,6 +6,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content id="budget" padding>
+    <button ion-button block color="primary">Budget</button>
+    <button ion-button block color="primary">Expenses</button>
+    <button ion-button block color="primary">Accounts</button>
+    <button ion-button block color="primary">Profile & Settings</button>
 </ion-content>
