--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Budget" tabIcon="cash"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Finances" tabIcon="cash"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Settings" tabIcon="settings"></ion-tab>
 </ion-tabs>
