Added budget page and linked to finances page

--- a/src/pages/finances/finances.html
+++ b/src/pages/finances/finances.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content id="budget" padding>
-    <button ion-button block color="primary">Budget</button>
+    <button [navPush]="budgetRoot" ion-button block color="primary">Budget</button>
     <button ion-button block color="primary">Expenses</button>
     <button ion-button block color="primary">Accounts</button>
     <button ion-button block color="primary">Profile & Settings</button>
