Minor refactor of css properties

--- a/src/pages/finances/finances.html
+++ b/src/pages/finances/finances.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content id="budget" padding>
+<ion-content padding>
     <button [navPush]="budgetRoot" ion-button block color="primary">Budget</button>
     <button ion-button block color="primary">Expenses</button>
     <button ion-button block color="primary">Accounts</button>
