--- a/src/pages/finances/finances.html
+++ b/src/pages/finances/finances.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
     <button [navPush]="budgetRoot" ion-button block color="primary">Budget</button>
-    <button ion-button block color="primary">Expenses</button>
+    <button [navPush]="expensesRoot" ion-button block color="primary">Expenses</button>
     <button ion-button block color="primary">Accounts</button>
     <button ion-button block color="primary">Profile & Settings</button>
 </ion-content>
