Connected budget page to data

--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -7,34 +7,17 @@
 </ion-header>
 
 <ion-content class="outer-content">
-    <div *ngFor="let type of dataProvider.budgetsTotal">
-      {{type.name}}
-      <ul *ngFor="let item of type.data">
-        <li>{{item.name}}</li>
-        <li>{{item.amount}}</li>
-      </ul>
-    </div>
 
-    <ion-list>
-      <ion-list-header>
-        Busters
-      </ion-list-header>
+    <ion-list *ngFor="let type of dataProvider.budgetsTotal">
 
-        <ion-item>
-          <h2>Venkman</h2>
-          <p>Back off man, I'm a scientist.</p>
-        </ion-item>
-
-      <ion-item>
-        <h2>Venkman</h2>
-        <p>Back off man, I'm a scientist.</p>
+      <ion-list-header>{{type.name}}</ion-list-header>
+      <ion-item *ngFor="let item of type.data">
+        <span style="text-align:left;">
+          {{item.name}}
+          <span style="float:right;">{{item.amount}}</span>
+        </span>
       </ion-item>
 
-      <ion-item>
-        <h2>Venkman</h2>
-        <p>Back off man, I'm a scientist.</p>
-      </ion-item>
     </ion-list>
-
 
 </ion-content>
