Added admin forms

--- a/src/pages/admin/add-account-form/add-account-form.html
+++ b/src/pages/admin/add-account-form/add-account-form.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Add Budget
+      Add Account
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
