--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -8,6 +8,6 @@
 
 <ion-content padding>
     <button ion-button block color="primary" (click)="addBudget()">Add Budget</button>
-    <button ion-button block color="primary">Add Expense</button>
-    <button ion-button block color="primary">Add Account</button>
+    <button ion-button block color="primary" (click)="addExpense()">Add Expense</button>
+    <button ion-button block color="primary" (click)="addAccount()">Add Account</button>
 </ion-content>
