Added storage and addBudget functionality

--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -10,4 +10,5 @@
     <button ion-button block color="primary" (click)="addBudget()">Add Budget</button>
     <button ion-button block color="primary" (click)="addExpense()">Add Expense</button>
     <button ion-button block color="primary" (click)="addAccount()">Add Account</button>
+    <button ion-button block color="primary" (click)="setDefaultData()">Set Default Data</button>
 </ion-content>
