--- a/src/pages/admin/add-budget-form/add-budget-form.html
+++ b/src/pages/admin/add-budget-form/add-budget-form.html
@@ -19,11 +19,11 @@
     </ion-list-header>
     <ion-item>
       <ion-label stacked>Budget Name</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)]="name"></ion-input>
     </ion-item>
   </ion-list>
 
-  <ion-list radio-group>
+  <ion-list radio-group [(ngModel)]="type">
     <ion-list-header>
       Budget Type
     </ion-list-header>
@@ -43,7 +43,7 @@
     </ion-list-header>
     <ion-item>
       <ion-label stacked>Budget Amount</ion-label>
-      <ion-input type="number"></ion-input>
+      <ion-input type="number" [(ngModel)]="amount"></ion-input>
     </ion-item>
   </ion-list>
 
@@ -53,7 +53,7 @@
   <ion-toolbar>
     <ion-buttons end>
       <button ion-button color="danger">Cancel</button>
-      <button ion-button color="royal">Save</button>
+      <button ion-button color="royal" (click)="submit()">Save</button>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
