--- a/src/pages/admin/add-expense-form/add-expense-form.html
+++ b/src/pages/admin/add-expense-form/add-expense-form.html
@@ -15,45 +15,28 @@
 <ion-content>
   <ion-list>
     <ion-list-header>
-      Budget Information
+      Expense Information
     </ion-list-header>
+    <ion-item>
+      <ion-label stacked>Date</ion-label>
+      <ion-datetime displayFormat="MM/DD/YYYY" pickerFormat="MM/DD/YYYY" [(ngModel)]="date"></ion-datetime>
+    </ion-item>
     <ion-item>
       <ion-label stacked>Budget Name</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)]="name"></ion-input>
     </ion-item>
-  </ion-list>
-
-  <ion-list radio-group>
-    <ion-list-header>
-      Budget Type
-    </ion-list-header>
-    <ion-item>
-      <ion-label>Fixed</ion-label>
-      <ion-radio checked="true" value="fixed"></ion-radio>
-    </ion-item>
-    <ion-item>
-      <ion-label>Variable</ion-label>
-      <ion-radio value="variable"></ion-radio>
-    </ion-item>
-  </ion-list>
-
-  <ion-list>
-    <ion-list-header>
-      Financial Information
-    </ion-list-header>
     <ion-item>
       <ion-label stacked>Budget Amount</ion-label>
-      <ion-input type="number"></ion-input>
+      <ion-input type="number" [(ngModel)]="amount"></ion-input>
     </ion-item>
   </ion-list>
-
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
     <ion-buttons end>
       <button ion-button color="danger">Cancel</button>
-      <button ion-button color="royal">Save</button>
+      <button ion-button color="royal" (click)="submit()">Save</button>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
