Added accounts page

--- a/src/pages/admin/add-expense-form/add-expense-form.html
+++ b/src/pages/admin/add-expense-form/add-expense-form.html
@@ -22,11 +22,11 @@
       <ion-datetime displayFormat="MM/DD/YYYY" pickerFormat="MM/DD/YYYY" [(ngModel)]="date"></ion-datetime>
     </ion-item>
     <ion-item>
-      <ion-label stacked>Budget Name</ion-label>
+      <ion-label stacked>Expense Name</ion-label>
       <ion-input type="text" [(ngModel)]="name"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label stacked>Budget Amount</ion-label>
+      <ion-label stacked>Expense Amount</ion-label>
       <ion-input type="number" [(ngModel)]="amount"></ion-input>
     </ion-item>
   </ion-list>
