--- a/src/pages/accounts/accounts.html
+++ b/src/pages/accounts/accounts.html
@@ -8,16 +8,14 @@
 
 <ion-content class="outer-content">
 
-    <ion-list *ngFor="let type of dataProvider.budgetsTotal">
-
-      <ion-list-header>{{type.name}}</ion-list-header>
-      <ion-item *ngFor="let item of type.data">
-        <span style="text-align:left;">
-          {{item.name}}
-          <span style="float:right;" [ngClass]="{'negative': item.amount < 0 }">${{item.amount}}</span>
-        </span>
-      </ion-item>
-
-    </ion-list>
+  <ion-list-header>Accounts</ion-list-header>
+  <ion-list>
+    <ion-item *ngFor="let account of dataProvider.accounts">
+      <span style="text-align:left;">
+        {{account.name}}
+        <span style="float:right;" [ngClass]="{'negative': account.balance < 0 }">{{account.balance | currency:'USD':true}}</span>
+      </span>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
