Added add budget form to budget page

--- a/src/pages/admin/add-budget-form/add-budget-form.html
+++ b/src/pages/admin/add-budget-form/add-budget-form.html
@@ -52,7 +52,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons end>
-      <button ion-button color="danger">Cancel</button>
+      <button ion-button color="danger" (click)="dismiss()">Cancel</button>
       <button ion-button color="royal" (click)="submit()">Save</button>
     </ion-buttons>
   </ion-toolbar>
