--- a/src/pages/budget/budget.html
+++ b/src/pages/budget/budget.html
@@ -3,6 +3,11 @@
     <ion-title>
       Budget
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="royal" (click)="showAddBudget()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
