--- a/src/pages/accounts/accounts.html
+++ b/src/pages/accounts/accounts.html
@@ -3,6 +3,11 @@
     <ion-title>
       Accounts
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="royal" (click)="showAddAccount()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
