Updates expense-edit-form, readme, etc.

--- a/src/pages/expenses/expenses.html
+++ b/src/pages/expenses/expenses.html
@@ -19,8 +19,8 @@
 
     <ion-item *ngFor="let item of dataProvider.expenses">
       <ion-grid>
-        <ion-row>
-          <ion-col col-2>{{item.date}}</ion-col>
+        <ion-row (click)="showEditExpense(item)">
+          <ion-col col-4>{{item.date}}</ion-col>
           <ion-col>{{item.name}}</ion-col>
           <ion-col class="amount">${{item.amount}}</ion-col>
         </ion-row>
