--- a/src/pages/expenses/edit-expense-form/edit-expense-form.html
+++ b/src/pages/expenses/edit-expense-form/edit-expense-form.html
@@ -31,7 +31,7 @@
     </ion-item>
     <ion-item>
       <ion-label stacked>Budget</ion-label>
-      <ion-select [(ngModel)]="budget">
+      <ion-select [(ngModel)]="budget" interface="action-sheet">
         <ion-option *ngFor="let item of dataProvider.budgets" value="{{item.name}}">{{item.name}}</ion-option>
       </ion-select>
     </ion-item>
