Initial budget fix

--- a/src/pages/admin/add-budget-form/add-budget-form.html
+++ b/src/pages/admin/add-budget-form/add-budget-form.html
@@ -29,11 +29,11 @@
     </ion-list-header>
     <ion-item>
       <ion-label>Fixed</ion-label>
-      <ion-radio checked="true" value="fixed"></ion-radio>
+      <ion-radio checked="true" value="Fixed"></ion-radio>
     </ion-item>
     <ion-item>
       <ion-label>Variable</ion-label>
-      <ion-radio value="variable"></ion-radio>
+      <ion-radio value="Variable"></ion-radio>
     </ion-item>
   </ion-list>
 
