--- a/src/pages/admin/add-expense-form/add-expense-form.html
+++ b/src/pages/admin/add-expense-form/add-expense-form.html
@@ -31,13 +31,13 @@
     </ion-item>
     <ion-item>
       <ion-label stacked>Budget</ion-label>
-      <ion-select [(ngModel)]="budget" interface="action-sheet">
+      <ion-select [(ngModel)]="budget">
         <ion-option *ngFor="let item of dataProvider.budgets" value="{{item.name}}">{{item.name}}</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
       <ion-label stacked>Account</ion-label>
-      <ion-select [(ngModel)]="account" interface="action-sheet">
+      <ion-select [(ngModel)]="account">
         <ion-option *ngFor="let item of dataProvider.accounts" value="{{item.name}}">{{item.name}}</ion-option>
       </ion-select>
     </ion-item>
